# book-python-fastapi-9781098135508

./: .gitignore  README.md  pyproject.toml
ch11/: auth.py
ch12/: mod1.py  mod2.py  notes.md  test_summer1.py  test_summer2.py  test_summer_fake.py
ch14/: ai.py  notes.md
ch3/listings/: example3-1.py  example3-11.py  example3-15.py  example3-21.py  example3-24.py  example3-26.py  example3-28.py  example3-3.py  example3-31.py  example3-32.py  example3-33.py
ch4/listings/: example4-6.py  example4-7.py
ch5/listings/: data.py  model.py  test1.py  test2.py  test3.py  web.py
ch6/listings/: example6-1.py  example6-2.py  example6-4.py  example6-5.py  example6=3.py
src/: error.py  main.py
src/data/: creature.py  explorer.py  init.py  user.py
src/fake/: creature.py  explorer.py  user.py
src/service/: creature.py  explorer.py  user.py
src/test/: test_load.py  utils.py
src/test/unit/data/: test_creature.py  test_explorer.py
src/test/unit/service/: test_creature.py  test_explorer.py
src/test/unit/web/: test_creature.py  test_explorer.py
src/web/: creature.py  explorer.py  user.py
