[tool.poetry]
package-mode = false
description = "practice code for book 'FastAPI: Modern Python Web Development'"
authors = ["Ding Liu <contact@dingliu.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
httpie = "^3.2.3"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
mypy = "^1.11.2"
types-requests = "^2.32.0.20240712"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
