[tool.poetry]
package-mode = false
description = "practice code for book 'FastAPI: Modern Python Web Development'"
authors = ["Ding Liu <contact@dingliu.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
httpie = "^3.2.3"
httpx = "^0.27.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
python-multipart = "^0.0.9"
torch = "^2.4.1"
torchvision = "^0.19.1"
transformers = "^4.44.2"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
mypy = "^1.11.2"
types-requests = "^2.32.0.20240712"
python-dotenv = "^1.0.1"
types-python-jose = "^3.3.4.20240106"
types-passlib = "^1.7.7.20240819"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
hypothesis = "^6.112.0"
schemathesis = "^3.35.4"
faker = "^28.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
